java cli  options complete primary